--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <compileTarget>17</compileTarget>
         <dsf.version>1.3.1</dsf.version>
         <hapi.fhir.version>5.1.0</hapi.fhir.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
     </properties>
 
     <name>MII Feasibility Processes</name>
