--- a/mii-process-feasibility/src/test/resources/de/medizininformatik_initiative/process/feasibility/client/flare/forward_proxy_basic_auth.conf
+++ b/mii-process-feasibility/src/test/resources/de/medizininformatik_initiative/process/feasibility/client/flare/forward_proxy_basic_auth.conf
@@ -7,3 +7,4 @@ auth_param basic realm Test Forward Proxy Basic Authentication
 acl auth_users proxy_auth REQUIRED
 http_access allow auth_users
 http_access deny all
+max_filedescriptors 1024
